Make sure we're setting CGroup memory limits